<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Testing">Testing</string>
    <string name="app_name">Triage</string>
    <string name="patient_name">Name</string>
    <string name="login_button">Login</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="submitNewPatientData">Submit</string>
    <string name="list_patients">List of Patients</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="registerNewPatient">Register New Patient</string>
    <string name="title_activity_register_patient">RegisterPatientActivity</string>
    <string name="day">day</string>
    <string name="list">List</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="year">year</string>
    <string name="logout">Log Out</string>
    <string name="month">month</string>
    <string name="physician">Physician</string>
    <string name="doctor">Doctor</string>
    <string name="history">History</string>
    <string name="systolic">Systolic:</string>
    <string name="diastolic">Diastolic:</string>
    <string name="drug_name">Medication Name: </string>
    <string name="drug_instruction">Medication Instruction: </string>
    <string name="patient_dob">BirthDate:</string>
    <string name="patient_symptoms">Symptoms:</string>
    <string name="patient_heartRate">Heart Rate:</string>
    <string name="this_patient_name">Patient Name: </string>
    <string name="patient_temperature">Temperature:</string>
    <string name="seen_by_doctor">Seen By Doctor</string>
    <string name="patient_bloodPressure">Blood Pressure:</string>
    <string name="update_patient_status">Update Patient Status</string>
    <string name="find_patient_health_card_number">Find Patient</string>
    <string name="patient_health_card_number">Health Card Number</string>
    <string name="title_activity_patient_status">PatientStatusActivity</string>
    <string name="title_activity_update_patient_vital">UpdatePatientVitalActivity</string>
    <string name="title_activity_patient_list">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_physician">MainActivity</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="title_activity_patient_history">PatientHistoryActivity</string>

</resources>
