<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main"
    tools:context=".RegisterPatientActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/registerNewPatient" />

    <EditText
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/patient_name"
        android:textColorHint="#FFFFFF"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/patient_health_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_name"
        android:layout_below="@+id/patient_name"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/patient_health_card_number"
        android:textColorHint="#FFFFFF"
        android:inputType="number" />

    <EditText
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:ems="10"
        android:hint="@string/month"
        android:textColorHint="#FFFFFF"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_health_card_number"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/month"
        android:ems="10"
        android:hint="@string/day"
        android:textColorHint="#FFFFFF"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/month"
        android:layout_alignBottom="@+id/month"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/month"
        android:ems="10"
        android:textColorHint="#FFFFFF"
        android:hint="@string/year"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/day"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="24dp"
        android:onClick="registerNewPatient"
        android:text="@string/submitNewPatientData" />

</RelativeLayout>