<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main"
    tools:context=".UpdatePatientVitalActivity" >

    <EditText
        android:id="@+id/patient_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:textColorHint="#FFFFFF"
        android:ems="10"
        android:hint="@string/patient_temperature"
        android:inputType="number" />

    <Button
        android:id="@+id/sumbitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_symptoms"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:onClick="updatePatientVitals"
        android:textColor="#FFFFFF"
        android:text="@string/submitNewPatientData" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_systolic_pressure"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/update_patient_status"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/patient_systolic_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/patient_temperature"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:hint="@string/systolic"
        android:inputType="numberDecimal"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/patient_diastolic_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_systolic_pressure"
        android:layout_below="@+id/patient_systolic_pressure"
        android:ems="10"
        android:hint="@string/diastolic"
        android:inputType="numberDecimal"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/patient_heartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_diastolic_pressure"
        android:layout_below="@+id/patient_diastolic_pressure"
        android:ems="10"
        android:hint="@string/patient_heartRate"
        android:inputType="number"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/patient_symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_heartRate"
        android:layout_below="@+id/patient_heartRate"
        android:ems="10"
        android:hint="@string/patient_symptoms"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF" />

</RelativeLayout>