<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/display"
    tools:context=".DisplayActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:text="@string/app_name" />

        <requestFocus />

        <EditText
            android:id="@+id/patient_health_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/patient_health_card_number"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TestingButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            android:onClick="findPatient"
            android:text="@string/find_patient_health_card_number" />

        <Button
            android:id="@+id/TestingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:onClick="newPatient"
            android:text="@string/registerNewPatient" />

        <Button
            android:id="@+id/list_patients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TestingButton"
            android:layout_centerHorizontal="true"
            android:onClick="listPatients"
            android:text="@string/list_patients" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/patient_health_card_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:onClick="logoutUser"
            android:text="@string/logout" />

</RelativeLayout>